--- a/index.html
+++ b/index.html
@@ -704,12 +704,12 @@
               <div class="email">
                 <i class="icofont-envelope"></i>
                 <h4>Email:</h4>
-                <p>info@example.com</p>
+                <p>info@lizzywasi.com</p>
               </div>
 
               <div class="phone">
                 <i class="icofont-phone"></i>
-                <h4>Call:</h4>
+                <h4>Teléfono:</h4>
                 <p>+1 5589 55488 55s</p>
               </div>
 
