--- a/index.html
+++ b/index.html
@@ -84,11 +84,7 @@
       <div class="row">
         <div class="col-lg-6 pt-4 pt-lg-0 order-2 order-lg-1 d-flex flex-column justify-content-center">
           <h1>Disfruta del Valle Sagrado de los Incas</h1>
-<<<<<<< HEAD
-          <h2>Accusantium quam, aliquam ultricies eget tempor id, aliquam eget nibh et. Maecen aliquam, risus at semper. Proin iaculis purus consequat sem cure digni ssim. Donec porttitora entum.</h2>
-=======
-          <h2>Testing Accusantium quam, aliquam ultricies eget tempor id, aliquam eget nibh et. Maecen aliquam, risus at semper. Proin iaculis purus consequat sem cure digni ssim. Donec porttitora entum.</h2>
->>>>>>> 2e973f6919bf6ac5374387fefdd39cb334d65d08
+          <h2>Testing number 2 Accusantium quam, aliquam ultricies eget tempor id, aliquam eget nibh et. Maecen aliquam, risus at semper. Proin iaculis purus consequat sem cure digni ssim. Donec porttitora entum.</h2>
           <div><a href="https://hotels.cloudbeds.com/reservation/flgeLO" target="_blank" class="btn-get-started scrollto">Reservar</a></div>
         </div>
         <div class="col-lg-6 order-1 order-lg-2 hero-img">
