--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Lizzy Wasi Urubamba - Index</title>
+  <title>Lizzy Wasi Urubamba</title>
   <meta content="" name="descriptison">
   <meta content="" name="keywords">
 
@@ -107,25 +107,25 @@
           </div>
 
           <div class="col-xl-7 col-lg-6 icon-boxes d-flex flex-column align-items-stretch justify-content-center py-5 px-lg-5">
-            <h3>Enim quis est voluptatibus aliquid consequatur fugiat</h3>
-            <p>Esse voluptas cumque vel exercitationem. Reiciendis est hic accusamus. Non ipsam et sed minima temporibus laudantium. Soluta voluptate sed facere corporis dolores excepturi. Libero laboriosam sint et id nulla tenetur. Suscipit aut voluptate.</p>
+            <h3>Ideal para Aventura o Descanso</h3>
+            <p>Ubicado en el pueblo de Urubamba, a una hora de la ciudad del Cusco y a 25 minutos de Ollantaytambo — donde se toma el tren de 90 minutos a Machu Picchu.</p>
 
             <div class="icon-box">
-              <div class="icon"><i class="bx bx-fingerprint"></i></div>
-              <h4 class="title"><a href="">Lorem Ipsum</a></h4>
-              <p class="description">Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident</p>
+              <div class="icon"><i class="bx bx-spa"></i></div>
+              <h4 class="title"><a href="">5 mil m2 de Áreas Verdes</a></h4>
+              <p class="description">Con sólo 17 habitaciones, más de 5 mil metros cuadrados de áreas verdes, spa, sala de yoga, estacionamiento privado y más amenidades.</p>
             </div>
 
             <div class="icon-box">
-              <div class="icon"><i class="bx bx-gift"></i></div>
-              <h4 class="title"><a href="">Nemo Enim</a></h4>
-              <p class="description">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque</p>
+              <div class="icon"><i class="bx bx-coffee"></i></div>
+              <h4 class="title"><a href="">Desayuno Incluido</a></h4>
+              <p class="description">Su estadía incluye el desayuno de fuentes locales servido diariamente. Además contamos con restaurante, horno de pizzas y bar.</p>
             </div>
 
             <div class="icon-box">
-              <div class="icon"><i class="bx bx-atom"></i></div>
-              <h4 class="title"><a href="">Dine Pad</a></h4>
-              <p class="description">Explicabo est voluptatum asperiores consequatur magnam. Et veritatis odit. Sunt aut deserunt minus aut eligendi omnis</p>
+              <div class="icon"><i class="bx bx-bus"></i></div>
+              <h4 class="title"><a href="">Transporte al Aeropuerto</a></h4>
+              <p class="description">Lo ayudamos a coordinar sus necesidades de transporte personalizado para tours y recojo del aeropuerto.</p>
             </div>
 
           </div>
@@ -139,7 +139,7 @@
       <div class="container">
 
         <div class="section-title">
-          <h2>Gallery</h2>
+          <h2>Lizzy Wasi</h2>
           <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
         </div>
 
@@ -256,7 +256,7 @@
 
         <div class="section-title">
           <h2>Habitaciones</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+          <p>Todas las habitaciones cuentan con decoración auténtica, entrada independiente y vista a los jardines y montañas del Valle Sagrado. Camas adicionales a pedido. </p>
         </div>
 
         <div class="row">
@@ -266,15 +266,13 @@
               <div class="member-img">
                 <img src="assets/img/team/team-1.jpg" class="img-fluid" alt="">
                 <div class="social">
-                  <a href=""><i class="icofont-twitter"></i></a>
-                  <a href=""><i class="icofont-facebook"></i></a>
-                  <a href=""><i class="icofont-instagram"></i></a>
-                  <a href=""><i class="icofont-linkedin"></i></a>
+                  <!--<a href=""><i class="icofont-twitter"></i></a>-->
+                  <a href="" class="btn-get-started scrollto">Más Información</a>
                 </div>
               </div>
               <div class="member-info">
                 <h4>Doble Clásica</h4>
-                <span>Chief Executive Officer</span>
+                <span>Hasta 3 personas</span>
               </div>
             </div>
           </div>
@@ -284,15 +282,12 @@
               <div class="member-img">
                 <img src="assets/img/team/team-2.jpg" class="img-fluid" alt="">
                 <div class="social">
-                  <a href=""><i class="icofont-twitter"></i></a>
-                  <a href=""><i class="icofont-facebook"></i></a>
-                  <a href=""><i class="icofont-instagram"></i></a>
-                  <a href=""><i class="icofont-linkedin"></i></a>
+                  <a href="" class="btn-get-started scrollto">Más Información</a>
                 </div>
               </div>
               <div class="member-info">
-                <h4>Sarah Jhonson</h4>
-                <span>Product Manager</span>
+                <h4>Deluxe con Balcón</h4>
+                <span>Hasta 4 personas</span>
               </div>
             </div>
           </div>
@@ -302,15 +297,12 @@
               <div class="member-img">
                 <img src="assets/img/team/team-3.jpg" class="img-fluid" alt="">
                 <div class="social">
-                  <a href=""><i class="icofont-twitter"></i></a>
-                  <a href=""><i class="icofont-facebook"></i></a>
-                  <a href=""><i class="icofont-instagram"></i></a>
-                  <a href=""><i class="icofont-linkedin"></i></a>
+                    <a href="" class="btn-get-started scrollto">Más Información</a>
                 </div>
               </div>
               <div class="member-info">
-                <h4>William Anderson</h4>
-                <span>CTO</span>
+                <h4>Familiar con Balcón</h4>
+                <span>Hasta 5 personas</span>
               </div>
             </div>
           </div>
@@ -320,15 +312,12 @@
               <div class="member-img">
                 <img src="assets/img/team/team-4.jpg" class="img-fluid" alt="">
                 <div class="social">
-                  <a href=""><i class="icofont-twitter"></i></a>
-                  <a href=""><i class="icofont-facebook"></i></a>
-                  <a href=""><i class="icofont-instagram"></i></a>
-                  <a href=""><i class="icofont-linkedin"></i></a>
+                <a href="" class="btn-get-started scrollto">Más Información</a>
                 </div>
               </div>
               <div class="member-info">
-                <h4>Amanda Jepson</h4>
-                <span>Accountant</span>
+                <h4>Bungalow</h4>
+                <span>Hasta 6 personas</span>
               </div>
             </div>
           </div>
@@ -688,7 +677,7 @@
         </div>
 
         <div>
-          <iframe style="border:0; width: 100%; height: 270px;" src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d12097.433213460943!2d-74.0062269!3d40.7101282!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xb89d1fe6bc499443!2sDowntown+Conference+Center!5e0!3m2!1smk!2sbg!4v1539943755621" frameborder="0" allowfullscreen></iframe>
+          <iframe style="border:0; width: 100%; height: 270px;" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d31062.203539636048!2d-72.14416026234021!3d-13.301963270138518!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x916ddd24e3812bef%3A0xe38783246c003f72!2sLizzy%20Wasi%20Urubamba!5e0!3m2!1sen!2sus!4v1607291504933!5m2!1sen!2sus" frameborder="0" allowfullscreen></iframe>
         </div>
 
         <div class="row mt-5">
@@ -777,13 +766,13 @@
         <div class="row">
 
           <div class="col-lg-3 col-md-6 footer-contact">
-            <h3>Butterfly</h3>
+            <h3>Hotel Lizzy Wasi</h3>
             <p>
-              A108 Adam Street <br>
-              New York, NY 535022<br>
-              United States <br><br>
+              Calle Pisonayniyoc s/n, Urb. La Cantuta<br>
+              Urubamba, Cusco - Perú<br>
+               <br><br>
               <strong>Phone:</strong> +1 5589 55488 55<br>
-              <strong>Email:</strong> info@example.com<br>
+              <strong>Email:</strong> info@lizzywasi.com<br>
             </p>
           </div>
 
