--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@
               <div class="member-img">
                 <img src="assets/img/team/team-2.jpg" class="img-fluid" alt="">
                 <div class="social">
-                  <a href="" class="btn-get-started scrollto">Más Información</a>
+                  <a href="deluxe.html" class="btn-get-started scrollto">Más Información</a>
                 </div>
               </div>
               <div class="member-info">
