--- a/index.html
+++ b/index.html
@@ -50,9 +50,9 @@
           <li class="active"><a href="index.html">Home</a></li>
           <li><a href="#about">Hotel</a></li>
           <li><a href="#team">Habitaciones</a></li>
-          <li><a href="#services">Services</a></li>
-          <li><a href="#portfolio">Portfolio</a></li>
-          <li class="drop-down"><a href="">Drop Down</a>
+          <li><a href="#services">Servicios</a></li>
+          <li><a href="#portfolio">Actividades</a></li>
+          <!--<li class="drop-down"><a href="">Drop Down</a>
             <ul>
               <li><a href="#">Drop Down 1</a></li>
               <li class="drop-down"><a href="#">Deep Drop Down</a>
@@ -68,8 +68,8 @@
               <li><a href="#">Drop Down 3</a></li>
               <li><a href="#">Drop Down 4</a></li>
             </ul>
-          </li>
-          <li><a href="#contact">Contact</a></li>
+          </li>-->
+          <li><a href="#contact">Contacto</a></li>
           <li><a href="#contact">English</a></li>
 
         </ul>
@@ -305,7 +305,7 @@
 
         <div class="row counters">
 <!--los valores eran 3 y 6, yo los cambie a 12 -->
-          <div class="col-lg-2 col-2 mx-auto text-center">
+          <div class="col-lg-2 col-6 mx-auto text-center">
             <!--<span data-toggle="counter-up">232</span>
             <p>Clients</p>-->
             <div class="client-logo">
@@ -693,8 +693,9 @@
             <div class="info">
               <div class="address">
                 <i class="icofont-google-map"></i>
-                <h4>Location:</h4>
-                <p>A108 Adam Street, New York, NY 535022</p>
+                <h4>Dirección:</h4>
+                <p>Calle Pisonayniyoc s/n, Urb. La Cantuta<br>
+              Urubamba, Cusco - Perú</p>
               </div>
 
               <div class="email">
@@ -715,7 +716,7 @@
 
           <div class="col-lg-8 mt-5 mt-lg-0">
 
-            <form action="forms/contact.php" method="post" role="form" class="php-email-form">
+<!--<form action="forms/contact.php" method="post" role="form" class="php-email-form">
               <div class="form-row">
                 <div class="col-md-6 form-group">
                   <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" data-rule="minlen:4" data-msg="Please enter at least 4 chars" />
@@ -742,7 +743,7 @@
               <div class="text-center"><button type="submit">Send Message</button></div>
             </form>
 
-          </div>
+          </div>-->
 
         </div>
 
@@ -772,41 +773,50 @@
       <div class="container">
         <div class="row">
 
-          <div class="col-lg-3 col-md-6 footer-contact">
-            <h3>Hotel Lizzy Wasi</h3>
+          
+          
+          <div class="col-lg-2 col-md-6 footer-contact">
+          <div class="client-logo">
+              <img src="assets/img/lw_logo.png" class="img-fluid" alt="" style="max-width: 75%";>
+            </div>
+            <!--<h3>Hotel Lizzy Wasi</h3>
             <p>
               Calle Pisonayniyoc s/n, Urb. La Cantuta<br>
               Urubamba, Cusco - Perú<br>
                <br><br>
               <strong>Phone:</strong> +1 5589 55488 55<br>
               <strong>Email:</strong> info@lizzywasi.com<br>
-            </p>
+            </p>-->
           </div>
 
           <div class="col-lg-3 col-md-6 footer-links">
-            <h4>Useful Links</h4>
+            <!--<h4>Useful Links</h4>
             <ul>
               <li><i class="bx bx-chevron-right"></i> <a href="#">Home</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="#">About us</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="#">Services</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Terms of service</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Privacy policy</a></li>
-            </ul>
+            </ul>-->
+            <h3>Hotel Lizzy Wasi</h3>
+            <p>
+              Calle Pisonayniyoc s/n, Urb. La Cantuta<br>
+              Urubamba, Cusco - Perú<br>
+               <br>
+              <strong>Phone:</strong> +1 5589 55488 55<br>
+              <strong>Email:</strong> info@lizzywasi.com<br>
+            </p>
           </div>
 
           <div class="col-lg-3 col-md-6 footer-links">
-            <h4>Our Services</h4>
+            <h4>Políticas del Hotel</h4>
             <ul>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Web Design</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Web Development</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Product Management</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Marketing</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Graphic Design</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#">Cancelación</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#">Check-in / Check-out</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#">Nuestras políticas</a></li>
             </ul>
           </div>
 
           <div class="col-lg-3 col-md-6 footer-links">
-            <h4>Our Social Networks</h4>
+            <h4>Social Media</h4>
             <p>Cras fermentum odio eu feugiat lide par naso tierra videa magna derita valies</p>
             <div class="social-links mt-3">
               <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
