--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
           <li class="active"><a href="index.html">Home</a></li>
           <li><a href="#about">Hotel</a></li>
           <li><a href="#team">Habitaciones</a></li>
-          <li><a href="#services">Servicios</a></li>
+          <li><a href="#services">Amenidades</a></li>
           <li><a href="#portfolio">Actividades</a></li>
           <!--<li class="drop-down"><a href="">Drop Down</a>
             <ul>
@@ -164,8 +164,8 @@
 
           <div class="col-lg-3 col-md-4">
             <div class="gallery-item">
-              <a href="assets/img/gallery/gallery-3.jpg" class="venobox" data-gall="gallery-item">
-                <img src="assets/img/gallery/gallery-3.jpg" alt="" class="img-fluid">
+              <a href="assets/img/gallery/lizzy_wasi_1.png" class="venobox" data-gall="gallery-item">
+                <img src="assets/img/gallery/lizzy_wasi_1.png" alt="" class="img-fluid">
               </a>
             </div>
           </div>
@@ -188,8 +188,8 @@
 
           <div class="col-lg-3 col-md-4">
             <div class="gallery-item">
-              <a href="assets/img/gallery/gallery-6.jpg" class="venobox" data-gall="gallery-item">
-                <img src="assets/img/gallery/gallery-6.jpg" alt="" class="img-fluid">
+              <a href="assets/img/gallery/lizzy_wasi_2.png" class="venobox" data-gall="gallery-item">
+                <img src="assets/img/gallery/lizzy_wasi_2.png" alt="" class="img-fluid">
               </a>
             </div>
           </div>
@@ -309,7 +309,7 @@
             <!--<span data-toggle="counter-up">232</span>
             <p>Clients</p>-->
             <div class="client-logo">
-              <img src="assets/img/tripadvisor2020.png" class="img-fluid" alt="">
+              <img src="assets/img/tripadvisor2020.png" class="img-fluid" alt="" style="max-width: 145px">
             </div>
 
           </div>
@@ -398,7 +398,7 @@
       <div class="container">
 
         <div class="section-title">
-          <h2>Servicios</h2>
+          <h2>Amenidades</h2>
           <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
         </div>
 
@@ -406,14 +406,14 @@
           <div class="col-lg-4 col-md-6">
             <div class="icon-box">
               <div class="icon"><i class="las la-basketball-ball" style="color: #ff689b;"></i></div>
-              <h4 class="title"><a href="">Lorem Ipsum</a></h4>
+              <h4 class="title"><a href="">Restaurante</a></h4>
               <p class="description">Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident</p>
             </div>
           </div>
           <div class="col-lg-4 col-md-6">
             <div class="icon-box">
               <div class="icon"><i class="las la-book" style="color: #e9bf06;"></i></div>
-              <h4 class="title"><a href="">Dolor Sitema</a></h4>
+              <h4 class="title"><a href="">Bar</a></h4>
               <p class="description">Minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat tarad limino ata</p>
             </div>
           </div>
@@ -421,14 +421,14 @@
           <div class="col-lg-4 col-md-6" data-wow-delay="0.1s">
             <div class="icon-box">
               <div class="icon"><i class="las la-file-alt" style="color: #3fcdc7;"></i></div>
-              <h4 class="title"><a href="">Sed ut perspiciatis</a></h4>
+              <h4 class="title"><a href="">Zona de Parrillas</a></h4>
               <p class="description">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur</p>
             </div>
           </div>
           <div class="col-lg-4 col-md-6" data-wow-delay="0.1s">
             <div class="icon-box">
               <div class="icon"><i class="las la-tachometer-alt" style="color:#41cf2e;"></i></div>
-              <h4 class="title"><a href="">Magni Dolores</a></h4>
+              <h4 class="title"><a href="">Sala de Yoga</a></h4>
               <p class="description">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
             </div>
           </div>
@@ -436,14 +436,14 @@
           <div class="col-lg-4 col-md-6" data-wow-delay="0.2s">
             <div class="icon-box">
               <div class="icon"><i class="las la-globe-americas" style="color: #d6ff22;"></i></div>
-              <h4 class="title"><a href="">Nemo Enim</a></h4>
+              <h4 class="title"><a href="">Spa (próximamente)</a></h4>
               <p class="description">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque</p>
             </div>
           </div>
           <div class="col-lg-4 col-md-6" data-wow-delay="0.2s">
             <div class="icon-box">
               <div class="icon"><i class="las la-clock" style="color: #4680ff;"></i></div>
-              <h4 class="title"><a href="">Eiusmod Tempor</a></h4>
+              <h4 class="title"><a href="">Zona de Juegos</a></h4>
               <p class="description">Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi</p>
             </div>
           </div>
@@ -464,10 +464,10 @@
         <div class="row">
           <div class="col-lg-12 d-flex justify-content-center">
             <ul id="portfolio-flters">
-              <li data-filter="*" class="filter-active">All</li>
-              <li data-filter=".filter-app">App</li>
-              <li data-filter=".filter-card">Card</li>
-              <li data-filter=".filter-web">Web</li>
+              <li data-filter="*" class="filter-active">Todas</li>
+              <li data-filter=".filter-app">Hotel</li>
+              <li data-filter=".filter-card">Valle Sagrado</li>
+              <!--<li data-filter=".filter-web">Web</li>-->
             </ul>
           </div>
         </div>
@@ -488,7 +488,7 @@
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/portfolio-2.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
@@ -530,7 +530,7 @@
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+          <div class="col-lg-4 col-md-6 portfolio-item filter-card">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/portfolio-5.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
@@ -586,7 +586,7 @@
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+          <div class="col-lg-4 col-md-6 portfolio-item filter-card">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/portfolio-9.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
@@ -773,20 +773,10 @@
       <div class="container">
         <div class="row">
 
-          
-          
-          <div class="col-lg-2 col-md-6 footer-contact">
-          <div class="client-logo">
-              <img src="assets/img/lw_logo.png" class="img-fluid" alt="" style="max-width: 75%";>
+          <div class="col-lg-3 col-md-6 col-6 footer-contact">
+          <div class="logo mr-auto">
+              <img src="assets/img/lw_logo.png" class="img-fluid" alt="" style="max-width: 130px";>
             </div>
-            <!--<h3>Hotel Lizzy Wasi</h3>
-            <p>
-              Calle Pisonayniyoc s/n, Urb. La Cantuta<br>
-              Urubamba, Cusco - Perú<br>
-               <br><br>
-              <strong>Phone:</strong> +1 5589 55488 55<br>
-              <strong>Email:</strong> info@lizzywasi.com<br>
-            </p>-->
           </div>
 
           <div class="col-lg-3 col-md-6 footer-links">
@@ -795,7 +785,7 @@
               <li><i class="bx bx-chevron-right"></i> <a href="#">Home</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="#">About us</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="#">Services</a></li>
-            </ul>-->
+            </ul>--> 
             <h3>Hotel Lizzy Wasi</h3>
             <p>
               Calle Pisonayniyoc s/n, Urb. La Cantuta<br>
@@ -808,10 +798,10 @@
 
           <div class="col-lg-3 col-md-6 footer-links">
             <h4>Políticas del Hotel</h4>
+            <p>Cras fermentum odio eu feugiat lide par naso tierra videa magna derita valies</p>
             <ul>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Cancelación</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Check-in / Check-out</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Nuestras políticas</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#"></a>Políticas Generales</li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#">Covid 19</a></li>
             </ul>
           </div>
 
