--- a/index.html
+++ b/index.html
@@ -148,16 +148,16 @@
 
           <div class="col-lg-3 col-md-4">
             <div class="gallery-item">
-              <a href="assets/img/gallery/gallery-1.jpg" class="venobox" data-gall="gallery-item">
-                <img src="assets/img/gallery/gallery-1.jpg" alt="" class="img-fluid">
+              <a href="assets/img/gallery/lizzy_wasi_3.png" class="venobox" data-gall="gallery-item">
+                <img src="assets/img/gallery/lizzy_wasi_3.png" alt="" class="img-fluid">
               </a>
             </div>
           </div>
 
           <div class="col-lg-3 col-md-4">
             <div class="gallery-item">
-              <a href="assets/img/gallery/gallery-2.jpg" class="venobox" data-gall="gallery-item">
-                <img src="assets/img/gallery/gallery-2.jpg" alt="" class="img-fluid">
+              <a href="assets/img/gallery/lizzy_wasi_4.png" class="venobox" data-gall="gallery-item">
+                <img src="assets/img/gallery/lizzy_wasi_4.png" alt="" class="img-fluid">
               </a>
             </div>
           </div>
@@ -172,16 +172,24 @@
 
           <div class="col-lg-3 col-md-4">
             <div class="gallery-item">
-              <a href="assets/img/gallery/gallery-4.jpg" class="venobox" data-gall="gallery-item">
-                <img src="assets/img/gallery/gallery-4.jpg" alt="" class="img-fluid">
+              <a href="assets/img/gallery/lizzy_wasi_8.png" class="venobox" data-gall="gallery-item">
+                <img src="assets/img/gallery/lizzy_wasi_8.png" alt="" class="img-fluid">
               </a>
             </div>
           </div>
 
           <div class="col-lg-3 col-md-4">
             <div class="gallery-item">
-              <a href="assets/img/gallery/gallery-5.jpg" class="venobox" data-gall="gallery-item">
-                <img src="assets/img/gallery/gallery-5.jpg" alt="" class="img-fluid">
+              <a href="assets/img/gallery/lizzy_wasi_5.png" class="venobox" data-gall="gallery-item">
+                <img src="assets/img/gallery/lizzy_wasi_5.png" alt="" class="img-fluid">
+              </a>
+            </div>
+          </div>
+
+          <div class="col-lg-3 col-md-4">
+            <div class="gallery-item">
+              <a href="assets/img/gallery/lizzy_wasi_7.png" class="venobox" data-gall="gallery-item">
+                <img src="assets/img/gallery/lizzy_wasi_7.png" alt="" class="img-fluid">
               </a>
             </div>
           </div>
@@ -196,16 +204,8 @@
 
           <div class="col-lg-3 col-md-4">
             <div class="gallery-item">
-              <a href="assets/img/gallery/gallery-7.jpg" class="venobox" data-gall="gallery-item">
-                <img src="assets/img/gallery/gallery-7.jpg" alt="" class="img-fluid">
-              </a>
-            </div>
-          </div>
-
-          <div class="col-lg-3 col-md-4">
-            <div class="gallery-item">
-              <a href="assets/img/gallery/gallery-8.jpg" class="venobox" data-gall="gallery-item">
-                <img src="assets/img/gallery/gallery-8.jpg" alt="" class="img-fluid">
+              <a href="assets/img/gallery/lizzy_wasi_6.png" class="venobox" data-gall="gallery-item">
+                <img src="assets/img/gallery/lizzy_wasi_6.png" alt="" class="img-fluid">
               </a>
             </div>
           </div>
